--- a/HWiNFOcpuMini/HWiNFOcpuMini.ini
+++ b/HWiNFOcpuMini/HWiNFOcpuMini.ini
@@ -127,19 +127,25 @@ InlinePattern=#Powers#
 InlineSetting2=Size | 6
 InlinePattern2=#Powers#
 
+[RoundCPUMemory]
+Measure=Calc
+Formula=ROUND([MeasureCPUMemory]/1024,1)
+DynamicVariables=1
+
 [MeterCPUMemory]
 Meter=String
-MeasureName=MeasureCPUMemory
+MeasureName=RoundCPUMemory
 MeterStyle=MeterValueTextStyle
 X=10R
 Y=#GY#
-W=18
+W=26
+NumOfDecimals=1
 StringAlign=Left
-Text=%1#Percents#
+Text=%1GB
 InlineSetting=Color | #Accent#
-InlinePattern=#Percents#
+InlinePattern=GB
 InlineSetting2=Size | 6
-InlinePattern2=#Percents#
+InlinePattern2=GB
 
 [MeterTempDegrees]
 Meter=String
