--- a/HWiNFOnetMini/HWiNFOnetMini.ini
+++ b/HWiNFOnetMini/HWiNFOnetMini.ini
@@ -3,6 +3,8 @@ Update=1000
 DynamicVariables=1
 Interface=Best
 AccurateText=1
+MouseOverAction=[!ShowMeter "MeterNetOutData"][!ShowMeter "MeterNetInData"][!HideMeter "MeterNetOutSpeed"][!HideMeter "MeterNetInSpeed"][!Redraw]
+MouseLeaveAction=[!HideMeter "MeterNetOutData"][!HideMeter "MeterNetInData"][!ShowMeter "MeterNetOutSpeed"][!ShowMeter "MeterNetInSpeed"][!Redraw]
 ; OnRefreshAction=[!UpdateMeasure "CheckReset"]
 
 [Metadata]
@@ -14,13 +16,13 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 [Variables]
 @IncludeVariables=#@#SettingMini.inc
-
+BGWidth=140
 ;Reset stats every month at 1st day
 ResetDate=1
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0,0,200,20,2 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
+Shape=Rectangle 0,0,#BGWidth#,20,2 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ; Measures
 [MeasureNetInSpeed]
@@ -93,14 +95,15 @@ InlinePattern2=#Network#
 Meter=String
 MeasureName=CalcNetInData
 MeterStyle=MeterLabelStyle
-X=20R
+X=10R
 Y=5
-StringAlign=Center
+StringAlign=Left
 Text=%1#Data# 
 InlineSetting=Color | #Accent#
 InlinePattern=#Data#
 InlineSetting2=Size | 6
 InlinePattern2=#Data#
+Hidden=1
 
 [MeterCardName2]
 Meter=String
@@ -129,11 +132,12 @@ InlinePattern2=#Network#
 Meter=String
 MeasureName=CalcNetOutData
 MeterStyle=MeterLabelStyle
-X=20R
+X=10R
 Y=5
-StringAlign=Center
+StringAlign=Left
 Text=%1#Data# 
 InlineSetting=Color | #Accent#
 InlinePattern=#Data#
 InlineSetting2=Size | 6
 InlinePattern2=#Data#
+Hidden=1
