--- a/HWiNFOcpuMini/HWiNFOcpuMiniGadget.ini
+++ b/HWiNFOcpuMini/HWiNFOcpuMiniGadget.ini
@@ -57,7 +57,7 @@ Text=CPU
 MeterStyle=MeterLabelStyle
 FontColor=#Accent#
 X=#GX#
-Y=#GY#
+Y=2r
 StringAlign=Left
 
 [RoundCPULoad]
@@ -76,7 +76,7 @@ StringAlign=Left
 Text=%1#Percents#
 InlineSetting=Color | #Accent#
 InlinePattern=#Percents#
-InlineSetting2=Size | 6
+InlineSetting2=Size | #UnitSize#
 InlinePattern2=#Percents#
 
 [RoundCPUClock]
@@ -95,7 +95,7 @@ StringAlign=Left
 Text=%1#ClockSpeeds#
 InlineSetting=Color | #Accent#
 InlinePattern=#ClockSpeeds#
-InlineSetting2=Size | 6
+InlineSetting2=Size | #UnitSize#
 InlinePattern2=#ClockSpeeds#
 
 [RoundCPUPower]
@@ -114,7 +114,7 @@ StringAlign=Left
 Text=%1#Powers#
 InlineSetting=Color | #Accent#
 InlinePattern=#Powers#
-InlineSetting2=Size | 6
+InlineSetting2=Size | #UnitSize#
 InlinePattern2=#Powers#
 NumOfDecimals=0
 
@@ -135,7 +135,7 @@ StringAlign=Left
 Text=%1GB
 InlineSetting=Color | #Accent#
 InlinePattern=GB
-InlineSetting2=Size | 6
+InlineSetting2=Size | #UnitSize#
 InlinePattern2=GB
 
 [RoundCPUTemp]
@@ -154,5 +154,5 @@ StringAlign=Left
 Text=%1#Temperatures#
 InlineSetting=Color | #Accent#
 InlinePattern=#Temperatures#
-InlineSetting2=Size | 6
+InlineSetting2=Size | #UnitSize#
 InlinePattern2=#Temperatures#
