--- a/HWiNFOcpuMini/HWiNFOcpuMiniLHM.ini
+++ b/HWiNFOcpuMini/HWiNFOcpuMiniLHM.ini
@@ -16,76 +16,58 @@ GY=5
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0,0,260,20,2 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
+Shape=Rectangle 0,0,190,20,2 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ;=======================================Measures============================================;
-[MeasureTempDegreesCenter]
+[MeasureTempDegrees]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=ValueRaw#GPUTempEdge#
-
-[MeasureFanSpeedRPM]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=ValueRaw#GPUFan#
-
+RegValue=ValueRaw#CPUTemp#
 
 [MeasureCoreClockSpeedMHz]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=ValueRaw#GPUCoreClock#
+RegValue=ValueRaw#CPUClock#
 
-
-[MeasureGPUPowerW]
+[MeasureCPUPowerW]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=ValueRaw#GPUPower#
+RegValue=ValueRaw#CPUPower#
 
-
-[MeasureGPUCoreLoad]
+[MeasureCPUCoreLoad]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=ValueRaw#GPULoad#
+RegValue=ValueRaw#CPULoad#
 
-
-[MeasureGPUMemoryClock]
+[MeasureCPUMemory]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=ValueRaw#GPUMemoryClock#
-
-
-[MeasureGPUMemoryMB]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO64\VSB
-RegValue=ValueRaw#GPUMemory#
-
+RegValue=ValueRaw#CPUMemory#
 
 ;===============================================Meters======================================;
 
 [MeterCardName]
 Meter=String
-Text=GPU
+Text=CPU
 MeterStyle=MeterLabelStyle
 FontColor=#Accent#
 X=#GX#
-Y=2r
+Y=#GY#
 StringAlign=Left
 
-[RoundGPULoad]
+[RoundCPULoad]
 Measure=Calc
-Formula=ROUND([MeasureGPUCoreLoad],1)
+Formula=ROUND([MeasureCPUCoreLoad],1)
 DynamicVariables=1
 
 [MeterCoreLoad]
 Meter=String
-MeasureName=RoundGPULoad
+MeasureName=RoundCPULoad
 MeterStyle=MeterValueTextStyle
 X=10R
 Y=#GY#
@@ -94,17 +76,17 @@ StringAlign=Left
 Text=%1#Percents#
 InlineSetting=Color | #Accent#
 InlinePattern=#Percents#
-InlineSetting2=Size | #UnitSize#
+InlineSetting2=Size | 6
 InlinePattern2=#Percents#
 
-[RoundGPUClock]
+[RoundCPUClock]
 Measure=Calc
 Formula=ROUND([MeasureCoreClockSpeedMHz],1)
 DynamicVariables=1
 
 [MeterCoreClockSpeed]
 Meter=String
-MeasureName=RoundGPUClock
+MeasureName=RoundCPUClock
 MeterStyle=MeterValueTextStyle
 X=10R
 Y=#GY#
@@ -113,76 +95,57 @@ StringAlign=Left
 Text=%1#ClockSpeeds#
 InlineSetting=Color | #Accent#
 InlinePattern=#ClockSpeeds#
-InlineSetting2=Size | #UnitSize#
+InlineSetting2=Size | 6
 InlinePattern2=#ClockSpeeds#
 
-[RoundGPUPower]
+[RoundCPUPower]
 Measure=Calc
-Formula=ROUND([MeasureGPUPowerW],1)
+Formula=ROUND([MeasureCPUPowerW],1)
 DynamicVariables=1
 
-[MeterGPUPower]
+[MeterCPUPower]
 Meter=String
-MeasureName=RoundGPUPower
+MeasureName=RoundCPUPower
 MeterStyle=MeterValueTextStyle
 X=10R
 Y=#GY#
-W=18
+W=12
 StringAlign=Left
 Text=%1#Powers#
 InlineSetting=Color | #Accent#
 InlinePattern=#Powers#
-InlineSetting2=Size | #UnitSize#
+InlineSetting2=Size | 6
 InlinePattern2=#Powers#
+NumOfDecimals=0
 
-[RoundGPUMemory]
+[RoundCPUMemory]
 Measure=Calc
-Formula=ROUND([MeasureGPUMemoryMB]/1024,1)
+Formula=ROUND([MeasureCPUMemory]/1024,1)
 DynamicVariables=1
 
-[MeterGPUMemory]
+[MeterCPUMemory]
 Meter=String
-MeasureName=RoundGPUMemory
+MeasureName=RoundCPUMemory
 MeterStyle=MeterValueTextStyle
-NumOfDecimals=1
 X=10R
 Y=#GY#
 W=26
+NumOfDecimals=1
 StringAlign=Left
 Text=%1GB
 InlineSetting=Color | #Accent#
 InlinePattern=GB
-InlineSetting2=Size | #UnitSize#
+InlineSetting2=Size | 6
 InlinePattern2=GB
 
-
-[RoundGPUMemoryClock]
+[RoundCPUTemp]
 Measure=Calc
-Formula=ROUND([MeasureGPUMemoryClock],1)
+Formula=ROUND([MeasureTempDegrees],1)
 DynamicVariables=1
 
-[MeterGPUMemoryClock]
+[MeterTempDegrees]
 Meter=String
-MeasureName=RoundGPUMemoryClock
-MeterStyle=MeterValueTextStyle
-X=10R
-Y=#GY#
-W=33
-StringAlign=Left
-Text=%1#ClockSpeeds#
-InlineSetting=Color | #Accent#
-InlinePattern=#ClockSpeeds#
-InlineSetting2=Size | #UnitSize#
-InlinePattern2=#ClockSpeeds#
-
-[RoundGPUTemp]
-Measure=Calc
-Formula=ROUND([MeasureTempDegreesCenter],1)
-DynamicVariables=1
-
-[MeterTempDegreesCenter]
-Meter=String
-MeasureName=RoundGPUTemp
+MeasureName=RoundCPUTemp
 MeterStyle=MeterValueTextStyle
 X=10R
 Y=#GY#
@@ -191,24 +154,5 @@ StringAlign=Left
 Text=%1#Temperatures#
 InlineSetting=Color | #Accent#
 InlinePattern=#Temperatures#
-InlineSetting2=Size | #UnitSize#
+InlineSetting2=Size | 6
 InlinePattern2=#Temperatures#
-
-[RoundGPUFan]
-Measure=Calc
-Formula=ROUND([MeasureFanSpeedRPM],1)
-DynamicVariables=1
-
-[MeterFanSpeedRPM]
-Meter=String
-MeasureName=RoundGPUFan
-MeterStyle=MeterValueTextStyle
-X=10R
-Y=#GY#
-W=18
-StringAlign=Left
-Text=%1#Percents#
-InlineSetting=Color | #Accent#
-InlinePattern=#Percents#
-InlineSetting2=Size | #UnitSize#
-InlinePattern2=#Percents#
