--- a/HWiNFOcpuMini/HWiNFOcpuMiniGadget.ini
+++ b/HWiNFOcpuMini/HWiNFOcpuMiniGadget.ini
@@ -16,7 +16,7 @@ GY=5
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0,0,190,20,2 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
+Shape=Rectangle 0,0,195,20,2 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ;=======================================Measures============================================;
 [MeasureTempDegrees]
@@ -78,6 +78,8 @@ InlineSetting=Color | #Accent#
 InlinePattern=#Percents#
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=#Percents#
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=#Percents#
 
 [RoundCPUClock]
 Measure=Calc
@@ -90,13 +92,15 @@ MeasureName=RoundCPUClock
 MeterStyle=MeterValueTextStyle
 X=10R
 Y=#GY#
-W=33
+W=36
 StringAlign=Left
 Text=%1#ClockSpeeds#
 InlineSetting=Color | #Accent#
 InlinePattern=#ClockSpeeds#
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=#ClockSpeeds#
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=#ClockSpeeds#
 
 [RoundCPUPower]
 Measure=Calc
@@ -109,14 +113,15 @@ MeasureName=RoundCPUPower
 MeterStyle=MeterValueTextStyle
 X=10R
 Y=#GY#
-W=12
+W=15
 StringAlign=Left
 Text=%1#Powers#
 InlineSetting=Color | #Accent#
 InlinePattern=#Powers#
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=#Powers#
-NumOfDecimals=0
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=#Powers#
 
 [RoundCPUMemory]
 Measure=Calc
@@ -129,14 +134,16 @@ MeasureName=RoundCPUMemory
 MeterStyle=MeterValueTextStyle
 X=10R
 Y=#GY#
-W=26
-NumOfDecimals=1
+W=17
+NumOfDecimals=0
 StringAlign=Left
 Text=%1GB
 InlineSetting=Color | #Accent#
 InlinePattern=GB
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=GB
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=GB
 
 [RoundCPUTemp]
 Measure=Calc
@@ -156,3 +163,6 @@ InlineSetting=Color | #Accent#
 InlinePattern=#Temperatures#
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=#Temperatures#
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=#Temperatures#
+
