--- a/HWiNFOgpuMini/HWiNFOgpuMiniGadget.ini
+++ b/HWiNFOgpuMini/HWiNFOgpuMiniGadget.ini
@@ -16,7 +16,7 @@ GY=5
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0,0,260,20,2 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
+Shape=Rectangle 0,0,265,20,2 | Fill Color #BackgroundColor# | StrokeWidth 0 | Stroke Color #FrameColor#
 
 ;=======================================Measures============================================;
 [MeasureTempDegreesCenter]
@@ -96,6 +96,8 @@ InlineSetting=Color | #Accent#
 InlinePattern=#Percents#
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=#Percents#
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=#Percents#
 
 [RoundGPUClock]
 Measure=Calc
@@ -115,6 +117,8 @@ InlineSetting=Color | #Accent#
 InlinePattern=#ClockSpeeds#
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=#ClockSpeeds#
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=#ClockSpeeds#
 
 [RoundGPUPower]
 Measure=Calc
@@ -127,13 +131,15 @@ MeasureName=RoundGPUPower
 MeterStyle=MeterValueTextStyle
 X=10R
 Y=#GY#
-W=18
+W=20
 StringAlign=Left
 Text=%1#Powers#
 InlineSetting=Color | #Accent#
 InlinePattern=#Powers#
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=#Powers#
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=#Powers#
 
 [RoundGPUMemory]
 Measure=Calc
@@ -147,13 +153,15 @@ MeterStyle=MeterValueTextStyle
 NumOfDecimals=1
 X=10R
 Y=#GY#
-W=26
+W=24
 StringAlign=Left
 Text=%1GB
 InlineSetting=Color | #Accent#
 InlinePattern=GB
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=GB
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=GB
 
 
 [RoundGPUMemoryClock]
@@ -174,6 +182,8 @@ InlineSetting=Color | #Accent#
 InlinePattern=#ClockSpeeds#
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=#ClockSpeeds#
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=#ClockSpeeds#
 
 [RoundGPUTemp]
 Measure=Calc
@@ -193,6 +203,8 @@ InlineSetting=Color | #Accent#
 InlinePattern=#Temperatures#
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=#Temperatures#
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=#Temperatures#
 
 [RoundGPUFan]
 Measure=Calc
@@ -212,3 +224,5 @@ InlineSetting=Color | #Accent#
 InlinePattern=#Percents#
 InlineSetting2=Size | #UnitSize#
 InlinePattern2=#Percents#
+InlineSetting3=Face | #UnitFace#
+InlinePattern3=#Percents#
